feat: Update tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -129,12 +129,13 @@ bind -r L resize-pane -R 2
 # split current window vertically
 bind-key v split-window -h -c "#{pane_current_path}"
 # split current window horizontally
-bind-key h split-window -c "#{pane_current_path}"
+bind-key s split-window -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
 # Synchronize panes
-bind-key e set-window-option synchronize-pane \; display-message "synchronize is now #{?pane_synchronized,on,off}"
+bind-key e set-window-option synchronize-pane \;\
+    display-message "synchronize is now #{?pane_synchronized,on,off}"
 
 # kill window
 unbind &
@@ -155,7 +156,7 @@ run -b 'tmux bind -T copy-mode-vi C-v send -X rectangle-toggle 2> /dev/null || t
 # there is some hack with `exec & reattach`, credits to "https://github.com/gpakosz/.tmux"
 # don't really understand how it works, but at least window are not renamed to "reattach-to-user-namespace"
 if -b "command -v reattach-to-user-namespace > /dev/null 2>&1" \
-           "run 'tmux set -g default-command \"exec $(tmux show -gv default-shell) 2>/dev/null & reattach-to-user-namespace -l $(tmux show -gv default-shell)\"'"
+     "run 'tmux set -g default-command \"exec $(tmux show -gv default-shell) 2>/dev/null & reattach-to-user-namespace -l $(tmux show -gv default-shell)\"'"
 
 
 yank="~/.tmux/yank.sh"
@@ -180,7 +181,8 @@ set-option -g update-environment \
   SSH_CONNECTION\
   SSH_TTY\
   WINDOWID\
-  XAUTHORITY"
+  XAUTHORITY\
+  ITERM_PROFILE"
 bind '$' run "~/.tmux/renew_env.sh"
 
 
@@ -190,7 +192,7 @@ bind '$' run "~/.tmux/renew_env.sh"
 mousemode_indicator=0
 set-option -g status-justify left
 set-option -g status-left '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(whoami)@#h #[bg=colour236] '
-set-option -g status-left-length 30
+set-option -g status-left-length 40
 set-option -g status-bg colour237
 # set-option -g status-right '#{prefix_highlight} #{?pane_synchronized, #[bg=colour236] #[bg=green]#[fg=white] SYNC #[bg=colour236] ,}#[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %d %b %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
 set-option -g status-right '#{?client_prefix,#[bg=colour237] #[bg=colour236] #[bg=colour4]#[fg=colour15] ^A #[bg=colour236] ,}\
@@ -204,7 +206,7 @@ set-option -g status-interval 60  # redraw status line every 60 seconds
 
 set-option -g pane-border-status bottom
 set-option -g pane-border-format "#{pane_index} #{pane_current_command} "
-set-option -g pane-active-border-style "fg=colour253"
+set-option -g pane-active-border-style "fg=colour247"
 set-option -g pane-border-style "fg=colour243"
 
 set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] '
