--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -181,8 +181,7 @@ set-option -g update-environment \
   SSH_CONNECTION\
   SSH_TTY\
   WINDOWID\
-  XAUTHORITY\
-  ITERM_PROFILE"
+  XAUTHORITY"
 bind '$' run "~/.tmux/renew_env.sh"
 
 
