refactor: Rearange config files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 temp
-nvim/coc-settings.json
-*/.netrwhist
-*/.netrwbook
-config/git/config
+config/nvim/coc-settings.json
+**/.netrwhist
+**/.netrwbook
