feat: Add tmux theme based on background

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -181,7 +181,8 @@ set-option -g update-environment \
   SSH_CONNECTION\
   SSH_TTY\
   WINDOWID\
-  XAUTHORITY"
+  XAUTHORITY\
+  BG_LUMINANCE"
 bind '$' run "~/.tmux/renew_env.sh"
 
 
@@ -189,27 +190,22 @@ bind '$' run "~/.tmux/renew_env.sh"
 # Decoration (256-color)
 # -------------------------------------------------------------------
 mousemode_indicator=0
+
 set-option -g status-justify left
-set-option -g status-left '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(whoami)@#h #[bg=colour236] '
+
 set-option -g status-left-length 40
-set-option -g status-bg colour237
-# set-option -g status-right '#{prefix_highlight} #{?pane_synchronized, #[bg=colour236] #[bg=green]#[fg=white] SYNC #[bg=colour236] ,}#[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %d %b %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
-set-option -g status-right '#{?client_prefix,#[bg=colour237] #[bg=colour236] #[bg=colour4]#[fg=colour15] ^A #[bg=colour236] ,}\
-#{?pane_in_mode,#[bg=colour237] #[bg=colour236] #[bg=colour3]#[fg=colour16] COPY #[bg=colour236] ,}\
-#{?pane_synchronized,#[bg=colour237] #[bg=colour236] #[bg=colour10]#[fg=colour16] SYNC #[bg=colour236] ,}\
-#{?mousemode_indicator,#[bg=colour237] #[bg=colour236] #[bg=colour1]#[fg=colour15] MOUSE #[bg=colour236] ,}\
-#[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %d %b %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
 set-option -g status-right-length 60
 
 set-option -g status-interval 60  # redraw status line every 60 seconds
 
 set-option -g pane-border-status bottom
 set-option -g pane-border-format "#{pane_index} #{pane_current_command} "
-set-option -g pane-active-border-style "fg=colour249"
-set-option -g pane-border-style "fg=colour243"
 
-set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] '
-set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I #[bg=colour235]#[fg=colour167] #[bg=colour234]#W#[bg=colour235]#[fg=colour195]#F#[bg=colour236] '
+if-shell '[ $BG_LUMINANCE = light ]' \
+    'source-file $DOTS/tmux/tmux-light.conf'
+
+if-shell '[ $BG_LUMINANCE = dark ]' \
+    'source-file $DOTS/tmux/tmux-dark.conf'
 
 # set-window-option -g window-style 'bg=colour238'
 # set-window-option -g window-active-style 'bg=colour237'
@@ -230,22 +226,16 @@ bind-key 0 run "tmux split-window -l 12 'zsh -ci ftpane'"
 if-shell 'test -n "$SSH_CLIENT"' \
     'source-file $HOME/.tmux/tmux.conf.remote'
 
-# see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
+# see: toggle on/off all keybindings · Issue #247 · tmux/tmux - https://github.com/tmux/tmux/issues/247
 bind -T root F12  \
      set-option prefix None \;\
      set-option key-table off \;\
-     set-option status-left '#[bg=colour96] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour213] #(whoami)@#h #[bg=colour236] ' \;\
-     set-option status-right '#[bg=colour236] #[bg=colour235]#[fg=colour213] DISABLED #[bg=colour23k] #[bg=colour237] #[bg=colour96] ' \;\
-     set-window-option -g window-status-format '#[bg=colour238]#[fg=colour101] #I #[bg=colour239]#[fg=colour102] #[bg=colour240]#W#[bg=colour239]#[fg=colour249]#F#[bg=colour238] ' \;\
      set-option -g status-position top \;\
      refresh-client -S \;\
 
 bind -T off F12 \
      set-option -u prefix \;\
      set-option -u key-table \;\
-     set-option -u status-left \;\
-     set-option -u status-right \;\
-     set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] ' \;\
      set-option -g status-position bottom \;\
      refresh-client -S
 
