--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -230,12 +230,16 @@ if-shell 'test -n "$SSH_CLIENT"' \
 bind -T root F12  \
      set-option prefix None \;\
      set-option key-table off \;\
+     set-option status-left '' \;\
+     set-option status-right '' \;\
      set-option -g status-position top \;\
      refresh-client -S \;\
 
 bind -T off F12 \
      set-option -u prefix \;\
      set-option -u key-table \;\
+     set-option -u status-left \;\
+     set-option -u status-right \;\
      set-option -g status-position bottom \;\
      refresh-client -S
 
