--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,7 @@ config/git/config.local
 config/alacritty/colour.yml
 config/alacritty/colour.yml-e
 
+config/vim/plugged
+
 **/.netrwhist
 **/.netrwbook
