--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -182,7 +182,8 @@ set-option -g update-environment \
   SSH_TTY\
   WINDOWID\
   XAUTHORITY\
-  BG_LUMINANCE"
+  BG_LUMINANCE\
+  COLOUR_SCHEME"
 bind '$' run "~/.tmux/renew_env.sh"
 
 
