feat: Add rose-pine colour scheme

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -202,11 +202,7 @@ set-option -g status-interval 60  # redraw status line every 60 seconds
 set-option -g pane-border-status bottom
 set-option -g pane-border-format "#{pane_index} #{pane_current_command} "
 
-if-shell '[ $BG_LUMINANCE = light ]' \
-    'source-file $HOME/.tmux/tmux-light.conf'
-
-if-shell '[ $BG_LUMINANCE = dark ]' \
-    'source-file $HOME/.tmux/tmux-dark.conf'
+run-shell "cut -c3- ~/.tmux.conf | sh -s _load_colour"
 
 # set-window-option -g window-style 'bg=colour238'
 # set-window-option -g window-active-style 'bg=colour237'
@@ -313,6 +309,18 @@ set-option -g @resurrect-processes 'ssh watch glances'
 #     tmux setw -t "$window" remain-on-exit off \; swap-pane -s "$current_pane" -t "$new_pane"
 #   else
 #     $restore || tmux kill-pane
+#   fi
+# }
+#
+# _load_colour() {
+#   if [ -f $HOME/.tmux/color.$COLOUR_SCHEME.conf ]; then
+#     tmux source-file $HOME/.tmux/color.$COLOUR_SCHEME.conf
+#   else
+#     if [ ! -z $BG_LUMINANCE ]; then
+#       tmux source-file $HOME/.tmux/color.$BG_LUMINANCE.conf
+#     else
+#       tmux source-file $HOME/.tmux/color.dark.conf
+#     fi
 #   fi
 # }
 #
