--- a/config/alacritty/colour.yml
+++ b/config/alacritty/colour.yml
@@ -160,4 +160,74 @@ schemes:
       cyan:    '0x427b58'
       white:   '0x3c3836'
 
-colors: *miramare
+  rose_pine_moon: &rose-pine-dark
+    primary:
+      background: '0x232136'
+      foreground: '0xe0def4'
+    cursor:
+      text: '0x232136'
+      cursor: '0x825B65'
+    vi_mode_cursor:
+      text: '0x191724'
+      cursor: '0x825B65'
+    line_indicator:
+      foreground: None
+      background: None
+    selection:
+      text: CellForeground
+      background: '0x312E45'
+    normal:
+      black:   '0x817c9c'
+      red:     '0xeb6f92'
+      green:   '0x9ccfd8'
+      yellow:  '0xf6c177'
+      blue:    '0x3e8fb0'
+      magenta: '0xc4a7e7'
+      cyan:    '0xea9a97'
+      white:   '0xe0def4'
+    bright:
+      black:   '0x6e6a86'
+      red:     '0xeb6f92'
+      green:   '0x9ccfd8'
+      yellow:  '0xf6c177'
+      blue:    '0x31748f'
+      magenta: '0xc4a7e7'
+      cyan:    '0xebbcba'
+      white:   '0xe0def4'
+
+  rose_pine_dawn: &rose-pine-light
+    primary:
+      background: '0xfaf4ed'
+      foreground: '0x575279'
+    cursor:
+      text: '0xfaf4ed'
+      cursor: '0xECC5BF'
+    vi_mode_cursor:
+      text: '0xfaf4ed'
+      cursor: '0xECC5BF'
+    line_indicator:
+      foreground: None
+      background: None
+    selection:
+      text: CellForeground
+      background: '0xF5E2DF'
+    normal:
+      black:   '0x6e6a86'
+      red:     '0xb4637a'
+      green:   '0x56949f'
+      yellow:  '0xea9d34'
+      blue:    '0x286983'
+      magenta: '0x907aa9'
+      cyan:    '0xd7827e'
+      white:   '0x575279'
+    bright:
+      black:   '0x6e6a86'
+      red:     '0xeb6f92'
+      green:   '0x9ccfd8'
+      yellow:  '0xf6c177'
+      blue:    '0x31748f'
+      magenta: '0xc4a7e7'
+      cyan:    '0xebbcba'
+      white:   '0xe0def4'
+
+colors: *seoul256-dark
