feat: update colors

--- a/config/vivid/themes/catppuccin.yml
+++ b/config/vivid/themes/catppuccin.yml
@@ -1,14 +1,14 @@
 colors:
-  background_color: '403e3f'
-  white: 'd9d8d4'
-  red: 'c85148'
-  green: '6f9672'
-  yellow: 'deb371'
-  blue: '99bedd'
-  pink: 'd871b2'
-  cyan: '72bcba'
+  background_color: '1E1D2F'
+  white: 'D9E0EE'
+  red: 'F28FAD'
+  green: 'ABE9B3'
+  yellow: 'FAE3B0'
+  blue: '96CDFB'
+  pink: 'F5C2E7'
+  cyan: '89DCEB'
 
-  black: '606060'
+  black: '6E6C7E'
   gray: '999999'
   darkgray: '666666'
   darkergray: '333333'
