feat: change font

--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -128,7 +128,7 @@ font:
     style: Semibold
 
   # Italic font face
-  #italic:
+  italic:
     # Font family
     #
     # If the italic family is not specified, it will fall back to the
@@ -136,10 +136,10 @@ font:
     #family: monospace
 
     # The `style` can be specified to pick a specific face.
-    #style: Italic
+    style: Light Italic
 
   # Bold italic font face
-  #bold_italic:
+  bold_italic:
     # Font family
     #
     # If the bold italic family is not specified, it will fall back to the
@@ -148,6 +148,7 @@ font:
 
     # The `style` can be specified to pick a specific face.
     #style: Bold Italic
+    style: Semibold Italic
 
   # Point size
   size: 10.0
