feat: get back to upstream

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -243,7 +243,7 @@ bind -T off F12 \
 # TPM
 # @see https://github.com/tmux-plugins/tpm
 set-option -g @plugin 'tmux-plugins/tpm'
-set-option -g @plugin 'cih9088/tmux-resurrect'
+set-option -g @plugin 'tmux-plugins/tmux-resurrect'
 set-option -g @plugin 'tmux-plugins/tmux-continuum'
 run '~/.tmux/plugins/tpm/tpm'
 
