feat: add xz library

--- a/config_linux.yaml
+++ b/config_linux.yaml
@@ -178,6 +178,11 @@ boost:
   local: true
   force: false
 
+liblzma:
+  install: true
+  local: true
+  force: false
+
 ######################
 
 pyenv:
