--- a/config_osx.yaml
+++ b/config_osx.yaml
@@ -178,6 +178,11 @@ boost:
   local: false
   force: false
 
+liblzma:
+  install: true
+  local: false
+  force: false
+
 ######################
 
 pyenv:
