--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -55,6 +55,10 @@ bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
 # focus
 # set -g focus-events on
 
+# Allow escape sequence to be passed through tmux (new from 3.3)
+if-shell -b '[ $(echo "$(tmux -V | grep -Eo "[0-9]+([.][0-9]+)?") >= 3.3" | bc) = 1 ]' \
+  "set-option -g allow-passthrough on"
+
 
 # -------------------------------------------------------------------
 # Window options
