--- a/config_linux.yaml
+++ b/config_linux.yaml
@@ -249,6 +249,16 @@ sh_shfmt:
 terminfo:
   install: true
 
+unzip:
+  install: true
+  local: true
+  force: false
+
+gzip:
+  install: true
+  local: true
+  force: false
+
 zsh:
   install: true
   local: true
