--- a/config/vivid/themes/catppuccin-latte.yml
+++ b/config/vivid/themes/catppuccin-latte.yml
@@ -1,14 +1,14 @@
 colors:
-  background_color: '1E1D2F'
-  white: 'D9E0EE'
-  red: 'F28FAD'
-  green: 'ABE9B3'
-  yellow: 'FAE3B0'
-  blue: '96CDFB'
-  pink: 'F5C2E7'
-  cyan: '89DCEB'
+  background_color: 'EFF1F5'
+  white: 'ACB0BE'
+  red: 'D20F39'
+  green: '40A02B'
+  yellow: 'DF8E1D'
+  blue: '1E66F5'
+  pink: 'EA76CB'
+  cyan: '179299'
 
-  black: '6E6C7E'
+  black: '5C5F77'
   gray: '999999'
   darkgray: '666666'
   darkergray: '333333'
