--- a/config/tmux/color.dark.conf
+++ b/config/tmux/color.dark.conf
@@ -1,15 +1,18 @@
-set-option -g status-bg colour237
+set-option -g pane-active-border-style "fg=colour15"
+set-option -g pane-border-style "fg=colour8"
 
-set-option -g status-left '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(whoami)@#h #[bg=colour236] '
-# set-option -g status-right '#{prefix_highlight} #{?pane_synchronized, #[bg=colour236] #[bg=green]#[fg=white] SYNC #[bg=colour236] ,}#[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %d %b %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
-set-option -g status-right '#{?client_prefix,#[bg=colour237] #[bg=colour236] #[bg=colour4]#[fg=colour15] ^A #[bg=colour236] ,}\
-#{?pane_in_mode,#[bg=colour237] #[bg=colour236] #[bg=colour3]#[fg=colour15] COPY #[bg=colour236] ,}\
-#{?pane_synchronized,#[bg=colour237] #[bg=colour236] #[bg=colour2]#[fg=colour15] SYNC #[bg=colour236] ,}\
-#{?mousemode_indicator,#[bg=colour237] #[bg=colour236] #[bg=colour1]#[fg=colour15] MOUSE #[bg=colour236] ,}\
-#[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %d %b %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
-
-set-option -g pane-active-border-style "fg=colour249"
-set-option -g pane-border-style "fg=colour243"
-
-set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] '
-set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I #[bg=colour235]#[fg=colour167] #[bg=colour234]#W#[bg=colour235]#[fg=colour195]#F#[bg=colour236] '
+# set-option -g status-bg colour237
+#
+# set-option -g status-left '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(whoami)@#h #[bg=colour236] '
+# # set-option -g status-right '#{prefix_highlight} #{?pane_synchronized, #[bg=colour236] #[bg=green]#[fg=white] SYNC #[bg=colour236] ,}#[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %d %b %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
+# set-option -g status-right '#{?client_prefix,#[bg=colour237] #[bg=colour236] #[bg=colour4]#[fg=colour15] ^A #[bg=colour236] ,}\
+# #{?pane_in_mode,#[bg=colour237] #[bg=colour236] #[bg=colour3]#[fg=colour15] COPY #[bg=colour236] ,}\
+# #{?pane_synchronized,#[bg=colour237] #[bg=colour236] #[bg=colour2]#[fg=colour15] SYNC #[bg=colour236] ,}\
+# #{?mousemode_indicator,#[bg=colour237] #[bg=colour236] #[bg=colour1]#[fg=colour15] MOUSE #[bg=colour236] ,}\
+# #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %d %b %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
+#
+# set-option -g pane-active-border-style "fg=colour249"
+# set-option -g pane-border-style "fg=colour243"
+#
+# set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] '
+# set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I #[bg=colour235]#[fg=colour167] #[bg=colour234]#W#[bg=colour235]#[fg=colour195]#F#[bg=colour236] '
