--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -206,10 +206,20 @@ set-option -g status-interval 60  # redraw status line every 60 seconds
 set-option -g pane-border-status bottom
 set-option -g pane-border-format "#{pane_index} #{pane_current_command} "
 
-run-shell "cut -c3- ~/.tmux.conf | sh -s _load_colour"
+set-option -g status-bg colour0
 
-# set-window-option -g window-style 'bg=colour238'
-# set-window-option -g window-active-style 'bg=colour237'
+set-option -g status-left '#[bg=colour5]  🤷 #(whoami)@#h [#S] #[bg=colour0]   '
+
+set-option -g window-status-format '#[bg=colour0]#[fg=colour15] 🙈 #I [#W/#F] '
+set-option -g window-status-current-format '#[bg=colour15]#[fg=colour0,bold] 🐵 #I [#W/#F] '
+
+set-option -g status-right '#{?client_prefix,#[bg=colour0] #[bg=colour1] ^A #[bg=colour0] ,}\
+#{?pane_in_mode,#[bg=colour=0] #[bg=colour2] COPY #[bg=colour0] ,}\
+#{?mousemode_indicator,#[bg=colour0] #[bg=colour3] MOUSE #[bg=colour0] ,}\
+#{?pane_synchronized,#[bg=colour0] #[bg=colour4] SYNC #[bg=colour0] ,}\
+#[bg=colour5] 📆 #(date "+%a %d %b %H:%M") '
+
+run-shell "cut -c3- ~/.tmux.conf | sh -s _load_colour"
 
 
 # -------------------------------------------------------------------
