--- a/config/alacritty/colourschemes/rashad.yml
+++ b/config/alacritty/colourschemes/rashad.yml
@@ -4,13 +4,13 @@ colors:
     foreground: "#1D344F"
     dim_foreground: "#a5abb6"
 
-  cursor:
-    text: "#2e3440"
-    cursor: "#d8dee9"
-
-  vi_mode_cursor:
-    text: "#2e3440"
-    cursor: "#d8dee9"
+  # cursor:
+  #   text: "#2e3440"
+  #   cursor: "#d8dee9"
+  #
+  # vi_mode_cursor:
+  #   text: "#2e3440"
+  #   cursor: "#d8dee9"
 
   selection:
     text: CellBackground
@@ -45,3 +45,10 @@ colors:
     magenta: "#8e6f98"
     cyan: "#6ca8cf"
     white: "#CDD1D5"
+  # hints:
+  #   start:
+  #     foreground: "#1D344F"
+  #     background: "#a5abb6"
+  #   end:
+  #     foreground: "#1D344F"
+  #     background: "#a5abb6"
