--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -26,9 +26,10 @@ env:
 window:
   # Window dimensions (changes require restart)
   #
-  # Number of lines/columns (not pixels) in the terminal. The number of columns
-  # must be at least `2`, while using a value of `0` for columns and lines will
-  # fall back to the window manager's recommended size.
+  # Number of lines/columns (not pixels) in the terminal. Both lines and columns
+  # must be non-zero for this to take effect. The number of columns must be at
+  # least `2`, while using a value of `0` for columns and lines will fall back
+  # to the window manager's recommended size
   #dimensions:
   #  columns: 0
   #  lines: 0
@@ -61,7 +62,13 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background and no title bar buttons
-  decorations: buttonless
+  decorations: full
+
+  # Background opacity
+  #
+  # Window opacity as a floating point number from `0.0` to `1.0`.
+  # The value `0.0` is completely transparent and `1.0` is opaque.
+  #opacity: 1.0
 
   # Startup Mode (changes require restart)
   #
@@ -87,11 +94,24 @@ window:
     # General application class
     #general: Alacritty
 
-  # GTK theme variant (Linux/BSD only)
+  # Decorations theme variant
   #
-  # Override the variant of the GTK theme. Commonly supported values are `dark`
-  # and `light`. Set this to `None` to use the default theme variant.
-  #gtk_theme_variant: None
+  # Override the variant of the System theme/GTK theme/Wayland client side
+  # decorations. Commonly supported values are `Dark`, `Light`, and `None` for
+  # auto pick-up. Set this to `None` to use the default theme variant.
+  #decorations_theme_variant: None
+
+  # Resize increments
+  #
+  # Prefer resizing window by discrete steps equal to cell dimensions.
+  #resize_increments: false
+
+  # Make `Option` key behave as `Alt` (macOS only):
+  #   - OnlyLeft
+  #   - OnlyRight
+  #   - Both
+  #   - None (default)
+  #option_as_alt: None
 
 #scrolling:
   # Maximum number of lines in the scrollback buffer.
@@ -151,7 +171,7 @@ font:
     style: Semibold Italic
 
   # Point size
-  size: 10.0
+  size: 10.5
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
@@ -167,11 +187,12 @@ font:
   #  x: 0
   #  y: 0
 
-  # Thin stroke font rendering (macOS only)
+  # Use built-in font for box drawing characters.
   #
-  # Thin strokes are suitable for retina displays, but for non-retina screens
-  # it is recommended to set `use_thin_strokes` to `false`.
-  #use_thin_strokes: true
+  # If `true`, Alacritty will use a custom built-in font for box drawing
+  # characters (Unicode points 2500 - 259f).
+  #
+  #builtin_box_drawing: true
 
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
@@ -225,11 +246,7 @@ font:
     #  foreground: '#ffffff'
     #  background: '#000000'
 
-    #bar:
-    #  background: '#c5c8c6'
-    #  foreground: '#1d1f21'
-
-  # Keyboard regex hints
+  # Keyboard hints
   #hints:
     # First character in the hint label
     #
@@ -256,6 +273,15 @@ font:
   #line_indicator:
   #  foreground: None
   #  background: None
+
+  # Footer bar
+  #
+  # Color used for the footer bar on the bottom, used by search regex input,
+  # hyperlink URI preview, etc.
+  #
+  #footer_bar:
+  #  background: '#c5c8c6'
+  #  foreground: '#1d1f21'
 
   # Selection colors
   #
@@ -400,6 +426,11 @@ font:
   # Cursor blinking interval in milliseconds.
   #blink_interval: 750
 
+  # Time after which cursor stops blinking, in seconds.
+  #
+  # Specifying '0' will disable timeout for blinking.
+  #blink_timeout: 5
+
   # If this is `true`, the cursor will be rendered as a hollow box when the
   # window is not focused.
   #unfocused_hollow: true
@@ -418,8 +449,7 @@ live_config_reload: true
 # shell.
 #
 # Default:
-#   - (macOS) /bin/bash --login
-#   - (Linux/BSD) user login shell
+#   - (Linux/BSD/macOS) `$SHELL` or the user's login shell, if `$SHELL` is unset
 #   - (Windows) powershell
 #shell:
 #  program: /bin/bash
@@ -431,9 +461,6 @@ live_config_reload: true
 # Directory the shell is started in. If this is unset, or `None`, the working
 # directory of the parent process will be used.
 #working_directory: None
-
-# Send ESC (\x1b) before characters when alt is pressed.
-#alt_send_esc: true
 
 # Offer IPC using `alacritty msg` (unix only)
 #ipc_socket: true
@@ -450,18 +477,22 @@ live_config_reload: true
   # If this is `true`, the cursor is temporarily hidden when typing.
   #hide_when_typing: false
 
-# Regex hints
+# Hints
 #
-# Terminal hints can be used to find text in the visible part of the terminal
-# and pipe it to other applications.
+# Terminal hints can be used to find text or hyperlink in the visible part of
+# the terminal and pipe it to other applications.
 hints:
   # Keys used for the hint labels.
   #alphabet: "jfkdls;ahgurieowpq"
 
   # List with all available hints
   #
-  # Each hint must have a `regex` and either an `action` or a `command` field.
-  # The fields `mouse`, `binding` and `post_processing` are optional.
+  # Each hint must have any of `regex` or `hyperlinks` field and either an
+  # `action` or a `command` field. The fields `mouse`, `binding` and
+  # `post_processing` are optional.
+  #
+  # The `hyperlinks` option will cause OSC 8 escape sequence hyperlinks to be
+  # highlighted.
   #
   # The fields `command`, `binding.key`, `binding.mods`, `binding.mode` and
   # `mouse.mods` accept the same values as they do in the `key_bindings` section.
@@ -472,6 +503,7 @@ hints:
   # If the `post_processing` field is set to `true`, heuristics will be used to
   # shorten the match if there are characters likely not to be part of the hint
   # (e.g. a trailing `.`). This is most useful for URIs.
+  # `regex` matches.
   #
   # Values for `action`:
   #   - Copy
@@ -485,6 +517,7 @@ hints:
   enabled:
   - regex: "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)\
             [^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
+    hyperlinks: true
     command: open
     post_processing: true
     mouse:
@@ -534,8 +567,9 @@ hints:
 #
 # - `mods` (see key bindings)
 #mouse_bindings:
-#  - { mouse: Right,             action: ExpandSelection }
-#  - { mouse: Middle, mode: ~Vi, action: PasteSelection  }
+#  - { mouse: Right,                 action: ExpandSelection }
+#  - { mouse: Right,  mods: Control, action: ExpandSelection }
+#  - { mouse: Middle, mode: ~Vi,     action: PasteSelection  }
 
 # Key bindings
 #
@@ -602,6 +636,7 @@ hints:
 #   - Quit
 #       Quit Alacritty.
 #   - ToggleFullscreen
+#   - ToggleMaximized
 #   - SpawnNewInstance
 #       Spawn a new instance of Alacritty.
 #   - CreateNewWindow
@@ -623,6 +658,8 @@ hints:
 #   - ToggleBlockSelection
 #   - ToggleSemanticSelection
 #       Toggle semantic selection based on `selection.semantic_escape_chars`.
+#   - CenterAroundViCursor
+#       Center view around vi mode cursor
 #
 # - Vi mode exclusive cursor motion actions:
 #
@@ -744,9 +781,83 @@ hints:
 # If the same trigger is assigned to multiple actions, all of them are executed
 # in the order they were defined in.
 key_bindings:
-  # https://github.com/alacritty/alacritty/issues/62
-  - { key: F,        mods: Alt,     chars: "\x1bf"                       }
-  - { key: B,        mods: Alt,     chars: "\x1bb"                       }
+  # https://github.com/alacritty/alacritty/issues/62#issuecomment-347552058
+  - { key: A,         mods: Alt,       chars: "\x1ba"                       }
+  - { key: B,         mods: Alt,       chars: "\x1bb"                       }
+  - { key: C,         mods: Alt,       chars: "\x1bc"                       }
+  - { key: D,         mods: Alt,       chars: "\x1bd"                       }
+  - { key: E,         mods: Alt,       chars: "\x1be"                       }
+  - { key: F,         mods: Alt,       chars: "\x1bf"                       }
+  - { key: G,         mods: Alt,       chars: "\x1bg"                       }
+  - { key: H,         mods: Alt,       chars: "\x1bh"                       }
+  - { key: I,         mods: Alt,       chars: "\x1bi"                       }
+  - { key: J,         mods: Alt,       chars: "\x1bj"                       }
+  - { key: K,         mods: Alt,       chars: "\x1bk"                       }
+  - { key: L,         mods: Alt,       chars: "\x1bl"                       }
+  - { key: M,         mods: Alt,       chars: "\x1bm"                       }
+  - { key: N,         mods: Alt,       chars: "\x1bn"                       }
+  - { key: O,         mods: Alt,       chars: "\x1bo"                       }
+  - { key: P,         mods: Alt,       chars: "\x1bp"                       }
+  - { key: Q,         mods: Alt,       chars: "\x1bq"                       }
+  - { key: R,         mods: Alt,       chars: "\x1br"                       }
+  - { key: S,         mods: Alt,       chars: "\x1bs"                       }
+  - { key: T,         mods: Alt,       chars: "\x1bt"                       }
+  - { key: U,         mods: Alt,       chars: "\x1bu"                       }
+  - { key: V,         mods: Alt,       chars: "\x1bv"                       }
+  - { key: W,         mods: Alt,       chars: "\x1bw"                       }
+  - { key: X,         mods: Alt,       chars: "\x1bx"                       }
+  - { key: Y,         mods: Alt,       chars: "\x1by"                       }
+  - { key: Z,         mods: Alt,       chars: "\x1bz"                       }
+  - { key: A,         mods: Alt|Shift, chars: "\x1bA"                       }
+  - { key: B,         mods: Alt|Shift, chars: "\x1bB"                       }
+  - { key: C,         mods: Alt|Shift, chars: "\x1bC"                       }
+  - { key: D,         mods: Alt|Shift, chars: "\x1bD"                       }
+  - { key: E,         mods: Alt|Shift, chars: "\x1bE"                       }
+  - { key: F,         mods: Alt|Shift, chars: "\x1bF"                       }
+  - { key: G,         mods: Alt|Shift, chars: "\x1bG"                       }
+  - { key: H,         mods: Alt|Shift, chars: "\x1bH"                       }
+  - { key: I,         mods: Alt|Shift, chars: "\x1bI"                       }
+  - { key: J,         mods: Alt|Shift, chars: "\x1bJ"                       }
+  - { key: K,         mods: Alt|Shift, chars: "\x1bK"                       }
+  - { key: L,         mods: Alt|Shift, chars: "\x1bL"                       }
+  - { key: M,         mods: Alt|Shift, chars: "\x1bM"                       }
+  - { key: N,         mods: Alt|Shift, chars: "\x1bN"                       }
+  - { key: O,         mods: Alt|Shift, chars: "\x1bO"                       }
+  - { key: P,         mods: Alt|Shift, chars: "\x1bP"                       }
+  - { key: Q,         mods: Alt|Shift, chars: "\x1bQ"                       }
+  - { key: R,         mods: Alt|Shift, chars: "\x1bR"                       }
+  - { key: S,         mods: Alt|Shift, chars: "\x1bS"                       }
+  - { key: T,         mods: Alt|Shift, chars: "\x1bT"                       }
+  - { key: U,         mods: Alt|Shift, chars: "\x1bU"                       }
+  - { key: V,         mods: Alt|Shift, chars: "\x1bV"                       }
+  - { key: W,         mods: Alt|Shift, chars: "\x1bW"                       }
+  - { key: X,         mods: Alt|Shift, chars: "\x1bX"                       }
+  - { key: Y,         mods: Alt|Shift, chars: "\x1bY"                       }
+  - { key: Z,         mods: Alt|Shift, chars: "\x1bZ"                       }
+  - { key: Key1,      mods: Alt,       chars: "\x1b1"                       }
+  - { key: Key2,      mods: Alt,       chars: "\x1b2"                       }
+  - { key: Key3,      mods: Alt,       chars: "\x1b3"                       }
+  - { key: Key4,      mods: Alt,       chars: "\x1b4"                       }
+  - { key: Key5,      mods: Alt,       chars: "\x1b5"                       }
+  - { key: Key6,      mods: Alt,       chars: "\x1b6"                       }
+  - { key: Key7,      mods: Alt,       chars: "\x1b7"                       }
+  - { key: Key8,      mods: Alt,       chars: "\x1b8"                       }
+  - { key: Key9,      mods: Alt,       chars: "\x1b9"                       }
+  - { key: Key0,      mods: Alt,       chars: "\x1b0"                       }
+  - { key: Space,     mods: Control,   chars: "\x00"                        } # Ctrl + Space
+  - { key: Grave,     mods: Alt,       chars: "\x1b`"                       } # Alt + `
+  - { key: Grave,     mods: Alt|Shift, chars: "\x1b~"                       } # Alt + ~
+  - { key: Period,    mods: Alt,       chars: "\x1b."                       } # Alt + .
+  - { key: Key8,      mods: Alt|Shift, chars: "\x1b*"                       } # Alt + *
+  - { key: Key3,      mods: Alt|Shift, chars: "\x1b#"                       } # Alt + #
+  - { key: Period,    mods: Alt|Shift, chars: "\x1b>"                       } # Alt + >
+  - { key: Comma,     mods: Alt|Shift, chars: "\x1b<"                       } # Alt + <
+  - { key: Minus,     mods: Alt|Shift, chars: "\x1b_"                       } # Alt + _
+  - { key: Key5,      mods: Alt|Shift, chars: "\x1b%"                       } # Alt + %
+  - { key: Key6,      mods: Alt|Shift, chars: "\x1b^"                       } # Alt + ^
+  - { key: Backslash, mods: Alt,       chars: "\x1b\\"                      } # Alt + \
+  - { key: Backslash, mods: Alt|Shift, chars: "\x1b|"                       } # Alt + |
+    
 
   #- { key: Paste,                                       action: Paste          }
   #- { key: Copy,                                        action: Copy           }
@@ -876,5 +987,14 @@ key_bindings:
   #   - Trace
   #log_level: Warn
 
+  # Renderer override.
+  #   - glsl3
+  #   - gles2
+  #   - gles2_pure
+  #renderer: None
+
   # Print all received window events.
   #print_events: false
+
+  # Highlight window damage information.
+  #highlight_damage: false
