fix: revert color

--- a/config/alacritty/colourschemes/rose-pine-dawn.toml
+++ b/config/alacritty/colourschemes/rose-pine-dawn.toml
@@ -1,47 +1,71 @@
-[colors.bright]
-black = "0x9893a5"
-blue = "0x56949f"
-cyan = "0xd7827e"
-green = "0x286983"
-magenta = "0x907aa9"
-red = "0xb4637a"
-white = "0x575279"
-yellow = "0xea9d34"
+[colors.primary]
+foreground = "#575279"
+background = "#faf4ed"
+dim_foreground = "#797593"
+bright_foreground = "#575279"
 
 [colors.cursor]
-cursor = "0xcecacd"
-text = "0x575279"
-
-[colors.hints.end]
-background = "#fffaf3"
-foreground = "#9893a5"
-
-[colors.hints.start]
-background = "#fffaf3"
-foreground = "#797593"
-
-[colors.line_indicator]
-background = "None"
-foreground = "None"
-
-[colors.normal]
-black = "0xf2e9e1"
-blue = "0x56949f"
-cyan = "0xd7827e"
-green = "0x286983"
-magenta = "0x907aa9"
-red = "0xb4637a"
-white = "0x575279"
-yellow = "0xea9d34"
-
-[colors.primary]
-background = "0xfaf4ed"
-foreground = "0x575279"
-
-[colors.selection]
-background = "0xdfdad9"
-text = "0x575279"
+text = "#575279"
+cursor = "#cecacd"
 
 [colors.vi_mode_cursor]
-cursor = "0xcecacd"
-text = "0x575279"
+text = "#575279"
+cursor = "#cecacd"
+
+[colors.search.matches]
+foreground = "#797593"
+background = "#f2e9e1"
+
+[colors.search.focused_match]
+foreground = "#faf4ed"
+background = "#d7827e"
+
+[colors.hints.start]
+foreground = "#797593"
+background = "#fffaf3"
+
+[colors.hints.end]
+foreground = "#9893a5"
+background = "#fffaf3"
+
+[colors.line_indicator]
+foreground = "None"
+background = "None"
+
+[colors.footer_bar]
+foreground = "#575279"
+background = "#fffaf3"
+
+[colors.selection]
+text = "#575279"
+background = "#dfdad9"
+
+[colors.normal]
+black = "#f2e9e1"
+red = "#b4637a"
+green = "#286983"
+yellow = "#ea9d34"
+blue = "#56949f"
+magenta = "#907aa9"
+cyan = "#d7827e"
+white = "#575279"
+
+[colors.bright]
+black = "#9893a5"
+red = "#b4637a"
+green = "#286983"
+yellow = "#ea9d34"
+blue = "#56949f"
+magenta = "#907aa9"
+cyan = "#d7827e"
+white = "#575279"
+
+[colors.dim]
+black = "#9893a5"
+red = "#b4637a"
+green = "#286983"
+yellow = "#ea9d34"
+blue = "#56949f"
+magenta = "#907aa9"
+cyan = "#d7827e"
+white = "#575279"
