--- a/config/alacritty/colourschemes/rose-pine-moon.toml
+++ b/config/alacritty/colourschemes/rose-pine-moon.toml
@@ -1,47 +1,71 @@
-[colors.bright]
-black = "0x6e6a86"
-blue = "0x9ccfd8"
-cyan = "0xea9a97"
-green = "0x3e8fb0"
-magenta = "0xc4a7e7"
-red = "0xeb6f92"
-white = "0xe0def4"
-yellow = "0xf6c177"
+[colors.primary]
+foreground = "#e0def4"
+background = "#232136"
+dim_foreground = "#908caa"
+bright_foreground = "#e0def4"
 
 [colors.cursor]
-cursor = "0x56526e"
-text = "0xe0def4"
-
-[colors.hints.end]
-background = "#2a273f"
-foreground = "#6e6a86"
-
-[colors.hints.start]
-background = "#2a273f"
-foreground = "#908caa"
-
-[colors.line_indicator]
-background = "None"
-foreground = "None"
-
-[colors.normal]
-black = "0x393552"
-blue = "0x9ccfd8"
-cyan = "0xea9a97"
-green = "0x3e8fb0"
-magenta = "0xc4a7e7"
-red = "0xeb6f92"
-white = "0xe0def4"
-yellow = "0xf6c177"
-
-[colors.primary]
-background = "0x232136"
-foreground = "0xe0def4"
-
-[colors.selection]
-background = "0x44415a"
-text = "0xe0def4"
+text = "#e0def4"
+cursor = "#56526e"
 
 [colors.vi_mode_cursor]
-cursor = "0x56526e"
-text = "0xe0def4"
+text = "#e0def4"
+cursor = "#56526e"
+
+[colors.search.matches]
+foreground = "#908caa"
+background = "#393552"
+
+[colors.search.focused_match]
+foreground = "#232136"
+background = "#ea9a97"
+
+[colors.hints.start]
+foreground = "#908caa"
+background = "#2a273f"
+
+[colors.hints.end]
+foreground = "#6e6a86"
+background = "#2a273f"
+
+[colors.line_indicator]
+foreground = "None"
+background = "None"
+
+[colors.footer_bar]
+foreground = "#e0def4"
+background = "#2a273f"
+
+[colors.selection]
+text = "#e0def4"
+background = "#44415a"
+
+[colors.normal]
+black = "#393552"
+red = "#eb6f92"
+green = "#3e8fb0"
+yellow = "#f6c177"
+blue = "#9ccfd8"
+magenta = "#c4a7e7"
+cyan = "#ea9a97"
+white = "#e0def4"
+
+[colors.bright]
+black = "#6e6a86"
+red = "#eb6f92"
+green = "#3e8fb0"
+yellow = "#f6c177"
+blue = "#9ccfd8"
+magenta = "#c4a7e7"
+cyan = "#ea9a97"
+white = "#e0def4"
+
+[colors.dim]
+black = "#6e6a86"
+red = "#eb6f92"
+green = "#3e8fb0"
+yellow = "#f6c177"
+blue = "#9ccfd8"
+magenta = "#c4a7e7"
+cyan = "#ea9a97"
+white = "#e0def4"
