--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -177,6 +177,9 @@ bind-key -T copy-mode-vi A send-keys -X append-selection-and-cancel \;\
 # Clear scrollback buffer
 bind-key C-l send-keys C-l \; clear-history \; display-message "pane history cleared"
 
+if-shell -b '[ $(echo "$(tmux -V | grep -Eo "[0-9]+([.][0-9]+)?") >= 3.2" | bc) = 1 ]' \
+  "bind-key b display-popup -d '#{pane_current_path}' -E -h 75% -w 75% 'zsh'"
+
 set-option -g update-environment \
   "DISPLAY\
   SSH_ASKPASS\
@@ -204,7 +207,7 @@ set-option -g status-right-length 60
 set-option -g status-interval 60  # redraw status line every 60 seconds
 
 set-option -g pane-border-status bottom
-set-option -g pane-border-format "#{pane_index} #{pane_current_command} "
+set-option -g pane-border-format " #{pane_index} #{pane_current_command} in #(echo '#{pane_current_path}' | awk -F '/' '{if(NF > 4){print \"…/\"$(NF-2)\"/\"$(NF-1)\"/\"$(NF)}else{print}}') "
 
 set-option -g status-bg colour0
 
@@ -259,10 +262,15 @@ bind -T off F12 \
 set-option -g @plugin 'tmux-plugins/tpm'
 set-option -g @plugin 'tmux-plugins/tmux-resurrect'
 set-option -g @plugin 'tmux-plugins/tmux-continuum'
+set-option -g @plugin 'Morantron/tmux-fingers'
 run '~/.tmux/plugins/tpm/tpm'
 
 set-option -g @resurrect-capture-pane-contents 'on'
 set-option -g @resurrect-processes 'ssh watch glances'
+
+set-option -g @fingers-main-action "echo {} | $yank"
+set-option -g @fingers-show-copied-notification 1
+
 
 # EOF
 #
