fix: remap jump

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -163,7 +163,7 @@ if -b "command -v reattach-to-user-namespace > /dev/null 2>&1" \
      "run 'tmux set -g default-command \"exec $(tmux show -gv default-shell) 2>/dev/null & reattach-to-user-namespace -l $(tmux show -gv default-shell)\"'"
 
 
-yank="~/.tmux/yank.sh"
+yank="$HOME/.tmux/yank.sh"
 
 # Copy selected text
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "$yank"
@@ -268,7 +268,8 @@ run '~/.tmux/plugins/tpm/tpm'
 set-option -g @resurrect-capture-pane-contents 'on'
 set-option -g @resurrect-processes 'ssh watch glances'
 
-set-option -g @fingers-main-action "echo {} | $yank"
+set-option -g @fingers-jump-key G
+set-option -g @fingers-main-action "$yank"
 set-option -g @fingers-show-copied-notification 1
 
 
