--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,5 +1,6 @@
-import = ["~/.config/alacritty/colourschemes/seoul256.toml"]
+[general]
 live_config_reload = true
+import = ["~/.config/alacritty/colourschemes/seoul256.toml"]
 
 [env]
 TERM = "xterm-256color"
