fix: bc is not present sometimes

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -56,7 +56,7 @@ bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
 # set -g focus-events on
 
 # Allow escape sequence to be passed through tmux (new from 3.3)
-if-shell -b '[ $(echo "$(tmux -V | grep -Eo "[0-9]+([.][0-9]+)?") >= 3.3" | bc) = 1 ]' \
+if-shell -b '[ $(echo -e "$(tmux -V | grep -Eo "[0-9]+([.][0-9]+)?")\n3.3" | sort -V | head -n1) = 3.3 ]' \
   "set-option -g allow-passthrough on"
 
 
