--- a/bin/workspace
+++ b/bin/workspace
@@ -5,19 +5,19 @@
 split=${1:-s}
 
 [ $split = "s" ] && (
-  tmux split-window -v -p 25
+  tmux split-window -v -l 25%
   tmux select-pane -t 1
 )
 
 [ $split = "d" ] && (
-  tmux split-window -v -p 25
-  tmux split-window -hb -p 50
+  tmux split-window -v -l 25%
+  tmux split-window -hb -l 50%
   tmux select-pane -t 1
 )
 
 [ $split = "t" ] && (
-  tmux split-window -v -p 25
-  tmux split-window -hb -p 66
-  tmux split-window -hb -p 50
+  tmux split-window -v -l 25%
+  tmux split-window -hb -l 66%
+  tmux split-window -hb -l 50%
   tmux select-pane -t 1
 )
