--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -59,6 +59,9 @@ bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
 if-shell -b '[ $(echo -e "$(tmux -V | grep -Eo "[0-9]+([.][0-9]+)?")\n3.3" | sort -V | head -n1) = 3.3 ]' \
   "set-option -g allow-passthrough on"
 
+# allows applications inside tmux to set tmux's clipboard (for osc52 in nested tmux w/o ssh)
+set-option -s set-clipboard on
+
 
 # -------------------------------------------------------------------
 # Window options
