--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -168,14 +168,16 @@ if -b "command -v reattach-to-user-namespace > /dev/null 2>&1" \
 
 yank="$HOME/.tmux/yank.sh"
 
-# Copy selected text
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "$yank"
-bind -T copy-mode-vi Y send-keys -X copy-line \;\
+# Copy mode
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "$yank"
+bind-key -T copy-mode-vi Y send-keys -X copy-line \;\
     run "tmux save-buffer - | $yank"
 bind-key -T copy-mode-vi D send-keys -X copy-end-of-line \;\
     run "tmux save-buffer - | $yank"
 bind-key -T copy-mode-vi A send-keys -X append-selection-and-cancel \;\
     run "tmux save-buffer - | $yank"
+bind-key -T copy-mode-vi [ send-keys -X previous-prompt
+bind-key -T copy-mode-vi ] send-keys -X next-prompt
 
 # Clear scrollback buffer
 bind-key C-l send-keys C-l \; clear-history \; display-message "pane history cleared"
