--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -7,7 +7,7 @@ font-size             = 10
 
 cursor-style          = block
 cursor-style-blink    = false
-cursor-invert-fg-bg   = false
+cursor-invert-fg-bg   = true
 
 shell-integration     = none
 confirm-close-surface = false
